fixed typos, structure edit

--- a/current-main_nb.ipynb
+++ b/current-main_nb.ipynb
@@ -13,10 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import statements for data Manipulation and analysis\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "# Used for Data Visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "# Used for the Machine Learning - Scikit-Learn\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
@@ -24,14 +29,16 @@
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, max_error, median_absolute_error\n",
     "from sklearn.feature_selection import mutual_info_regression\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "from scipy.stats import randint\n",
+    "\n",
+    "# Database Interaction\n",
     "from sqlalchemy import create_engine\n",
     "from urllib.parse import quote_plus\n",
-    "import csv\n",
-    "import os\n",
-    "import psycopg2\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from scipy.stats import randint\n"
+    "\n",
+    "# import csv\n",
+    "# import os\n",
+    "# import psycopg2\n"
    ]
   },
   {
@@ -46,8 +53,8 @@
    "metadata": {},
    "source": [
     "#### Let's Start by storing our data from the csv file in a dataframe\n",
-    "#### After inspecting the data we notice that the columns are seperated with a ';' semi colon, to solve this we use delimiter to seperate the columns in our dataframe. \n",
-    "#### The print statements will give us a glimpse of the code structure and a brief summary about each columns statistics."
+    "#### After inspecting the data I notice that the columns are seperated with a ';' semi colon, so I seperate them using the delimiter. \n",
+    "#### To get a look at the dataframe and make sure the data is as we expect, I created a print statements will give us a glimpse of the code structure and a brief summary about each columns statistics."
    ]
   },
   {
@@ -84,7 +91,7 @@
     "    # Transfer data to database\n",
     "    df.to_sql(table_name, engine, index=False, if_exists='replace')\n",
     "\n",
-    "# load_data_to_postgres_docker('student_grades_table', 'leonphoenix21', 'vtlt123@dck')\n"
+    "load_data_to_postgres_docker('student_grades_table', 'leonphoenix21', 'vtlt123@dck')\n"
    ]
   },
   {
@@ -241,18 +248,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the categorical columns\n",
     "categorical_columns = [\n",
     "    'school', 'sex', 'address', 'famsize', 'Pstatus', 'Mjob', 'Fjob', 'reason', 'guardian',\n",
     "    'schoolsup', 'famsup', 'paid', 'activities', 'nursery', 'higher', 'internet', 'romantic'\n",
     "]\n",
     "\n",
-    "# Apply label encoding to categorical columns in X\n",
+    "# Here I am applying label encoding to categorical columns in X\n",
     "label_encoder = LabelEncoder()\n",
     "for column in categorical_columns:\n",
     "    X[column] = label_encoder.fit_transform(X[column])\n",
     "\n",
-    "# Display the DataFrame after label encoding\n",
     "print(X.head(1))"
    ]
   },
@@ -303,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create new features\n",
+    "# Creating new features here to see if they will improve the model\n",
     "X['academic_performance'] = X['G1'] + X['G2']\n",
     "X['study_engagement'] = X['studytime'] * X['absences']\n",
     "X['social_life'] = X['goout'] * X['freetime']\n",
@@ -358,7 +363,6 @@
     "    plt.yticks(width, ticks)\n",
     "    plt.title(\"Mutual Information Scores\")\n",
     "\n",
-    "# Assuming mi_scores is the mutual information scores you calculated\n",
     "plt.figure(figsize=(10, 8))\n",
     "plot_mi_scores(mi_scores)\n",
     "plt.show()"
@@ -368,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After taking a look at the MI scores it's apparent that only a few features are highly dependent on our target variable (G3). So using that information we can now create an array of feature sets to test against our model. I chose to use the high performing features first and then to add more features to test which one work best."
+    "After taking a look at the MI scores it's apparent that only a few features are highly dependent on our target variable (G3). So using that information we can now create an array of feature sets to test against our model. I chose to use the high performing features first and then to add more features to test which one works best."
    ]
   },
   {
@@ -457,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have trained our trained our models on our feature sets lets create some visualizations displaying the model performance performance by measuring different important metrics that tell us how accurate our predictions are. We can gain insights from this process to understand how we can fine-tune the model for enhanced performance."
+    "Now that we have trained our models on our feature sets lets create some visualizations displaying the model performance by measuring different important metrics that tell us how accurate our predictions are. We can gain insights from this process to understand how we can fine-tune the model for enhanced performance."
    ]
   },
   {
@@ -668,7 +672,7 @@
     "    ax.legend(bbox_to_anchor=(1, 1), loc='upper left')\n",
     "\n",
     "# Show the plots\n",
-    "plt.tight_layout(rect=[0, 0.03, 1, 0.95])  # Adjust the layout for better visibility\n",
+    "plt.tight_layout(rect=[0, 0.03, 1, 0.95])  \n",
     "plt.show()\n"
    ]
   },
@@ -676,7 +680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I decided to write another function to do a randomized hyper-parameter tuning. I just want to compare the result to that of the GridSearch and see which is the better performing tuning model."
+    "I decided to write another function to do a randomized hyper-parameter tuning. I used thesame function I used for the GridSearchCV here but this time I replaced the Grid function with the RandomizedSearch function. I just want to compare the result to that of the GridSearchCV and see which is the better performing tuning model."
    ]
   },
   {
@@ -782,13 +786,6 @@
     "# Show the plots\n",
     "plt.tight_layout(rect=[0, 0.03, 1, 0.95])  # Adjust the layout for better visibility\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Additional Requests (Bonus)"
    ]
   }
  ],
